--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -4,8 +4,11 @@
 # model remove the '{}' from the fixture names and add the columns immediately
 # below each fixture, per the syntax in the comments below
 #
-one: {}
-# column: value
-#
-two: {}
-#  column: value
+steve:
+    name: Steve Rogers
+    email: steve@example.com
+    password_digest: <%=User.digest('password') %>
+john:
+    name: John Cena
+    email: john@example.com
+    password_digest: <%=User.digest('password') %>
